--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "isagro-chart-normalized-stacked-area",
-  "version": "0.1.0",
-  "private": true,
+  "name": "isagro-timeline",
+  "version": "1.0.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,9 +18,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "tsc && npm run copy-css",
+    "copy-css": "cpx src/**/*.css dist/",
+    "first:publishing": "npm run build && npm org set isagro && npm publish --access public",
+    "publish:patch": "git add . && git commit -m \"patch\" && npm version patch && npm run build && npm publish --access public",
+    "publish:minor": "git add . && git commit -m \"minor\" && npm version minor && npm run build && npm publish --access public",
+    "publish:major": "git add . && git commit -m \"major\" && npm version major && npm run build && npm publish --access public"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cpx": "^1.5.0",
+    "ol": "^10.0.0",
+    "typescript": "^4.9.5"
   }
 }
