--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start": "react-scripts start",
     "build": "tsc && npm run copy-css",
